- Changed back to Flexmojos 7.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <!-- Flex related properties -->
     <flex.version>4.15.0</flex.version>
     <air.version>20.0</air.version>
-    <flexmojos.version>7.2.0-SNAPSHOT</flexmojos.version>
+    <flexmojos.version>7.1.0</flexmojos.version>
     <apparat.version>1.0-RC9</apparat.version>
     <!-- Set this to localhost if you would like to test upload server -->
     <nexus.repository.host>dev.dukecon.org</nexus.repository.host>
