--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!-- Flex related properties -->
-    <flex.version>4.15.0</flex.version>
-    <air.version>20.0</air.version>
-    <flexmojos.version>7.1.0</flexmojos.version>
+    <flex.version>4.16.0</flex.version>
+    <air.version>23.0</air.version>
+    <flexmojos.version>7.2.0-SNAPSHOT</flexmojos.version>
     <apparat.version>1.0-RC9</apparat.version>
     <!-- Set this to localhost if you would like to test upload server -->
     <nexus.repository.host>dev.dukecon.org</nexus.repository.host>
